# cuttle.auto

./: README.md
locallization/02-lidar-odometry-gps/src/lidar_localization/: CMakeLists.txt
preProcess/catkin_label/: catkin编译_README.md
preProcess/catkin_label/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
preProcess/catkin_label/install/: .rosinstall  setup.sh
preProcess/catkin_label/logs/cv_bridge/: build.make.000.log.stderr
preProcess/catkin_label/logs/label_gazebo/: build.cmake.000.log.stderr
preProcess/catkin_label/src/robotx_label/label_gazebo/: CMakeLists.txt  README.md  read.md
preProcess/catkin_label/src/robotx_label/label_gazebo/config/: wamv_param.yaml
preProcess/catkin_label/src/robotx_label/label_gazebo/scripts/: bag_standard.py  bag_synchronizer.py  compy.py  label.py  ndt_bag_standard.py  semanticInWater_gen.py
preProcess/catkin_label/src/robotx_label/water_msgs/: CMakeLists.txt
preProcess/catkin_label/src/robotx_label/water_msgs/msg/: gpsPacket.msg
ros/devel/: .catkin  local_setup.sh  setup.sh
ros/devel/include/autosense_msgs/: PointCloud2Array.h  TrackingFixedTrajectoryArray.h  TrackingObjectArray.h
ros/devel/include/autoware_msgs/: DetectedObject.h  DetectedObjectArray.h  GridMapInfo.h  Lane.h  LaneArray.h  RemoteCmd.h  State.h  VehicleCmd.h  VehicleStatus.h  Waypoint.h
ros/devel/include/vector_map_msgs/: WaterArea.h  WaterAreaArray.h
ros/devel/lib/map_file/: points_map_filter  points_map_loader  vector_map_loader
ros/devel/lib/object_map/: grid_map_filter  laserscan2costmap  points2costmap  wayarea2grid
ros/devel/lib/pkgconfig/: autoware_build_flags.pc  autoware_msgs.pc  common_lib.pc  costmap_generator.pc  libvectormap.pc  map_file.pc  object_builders_lib.pc  object_map.pc  quick_start.pc  road_occupancy_processor.pc  roi_filters_lib.pc  roi_map_object_filter.pc  segmenters_lib.pc  vector_map.pc  vector_map_msgs.pc
ros/devel/lib/roi_map_object_filter/: roi_object_filter
ros/devel/lib/segmenters_lib/: detection_node
ros/src/quick_start/: CMakeLists.txt
(+276 files in other folders)
